src/parser.rs
use crate::ast::*;
use crate::lexer::{Lexer, SpannedToken, Token};

#[derive(Debug)]
pub enum ParseError {
    UnexpectedEof,
    UnexpectedToken {
        expected: String,
        found: Token,
        line: usize,
    },
    InvalidStatement(usize, String),
    ExpectedType(usize),
    LexerError(usize, String),
}

/// Convert a Token to a user-friendly description
fn friendly_token_name(token: &Token) -> String {
    match token {
        Token::Let => "'let'".to_string(),
        Token::Be => "'be'".to_string(),
        Token::A => "'a'".to_string(),
        Token::An => "'an'".to_string(),
        Token::With => "'with'".to_string(),
        Token::Value => "'value'".to_string(),
        Token::Period => "a period (.)".to_string(),
        Token::Comma => "a comma (,)".to_string(),
        Token::Colon => "a colon (:)".to_string(),
        Token::If => "'if'".to_string(),
        Token::Then => "'then'".to_string(),
        Token::Else | Token::Otherwise => "'otherwise'".to_string(),
        Token::While => "'while'".to_string(),
        Token::End => "'End'".to_string(),
        Token::Output => "'output'".to_string(),
        Token::Set => "'set'".to_string(),
        Token::To => "'to'".to_string(),
        Token::The => "'the'".to_string(),
        Token::Result => "'result'".to_string(),
        Token::Of => "'of'".to_string(),
        Token::And => "'and'".to_string(),
        Token::Or => "'or'".to_string(),
        Token::Negative => "'negative'".to_string(),
        Token::Not => "'not'".to_string(),
        Token::For => "'for'".to_string(),
        Token::Each => "'each'".to_string(),
        Token::Stop => "'stop'".to_string(),
        Token::Skip => "'skip'".to_string(),
        Token::From => "'from'".to_string(),
        Token::Call => "'call'".to_string(),
        Token::Give => "'give'".to_string(),
        Token::Back => "'back'".to_string(),
        Token::Returning => "'returning'".to_string(),
        Token::Define => "'define'".to_string(),
        Token::Kind => "'kind'".to_string(),
        Token::Property => "'property'".to_string(),
        Token::Ask => "'ask'".to_string(),
        Token::Plus => "a '+' operator".to_string(),
        Token::Minus => "a '-' operator".to_string(),
        Token::Star => "a '*' operator".to_string(),
        Token::Slash => "a '/' operator".to_string(),
        Token::IntLiteral(Some(n)) => format!("the number {}", n),
        Token::IntLiteral(None) => "a number".to_string(),
        Token::FloatLiteral(Some(f)) => format!("the decimal {}", f),
        Token::FloatLiteral(None) => "a decimal".to_string(),
        Token::StringLiteral(s) => format!("the text \"{}\"", s),
        Token::Identifier(name) => format!("'{}'", name),
        Token::True | Token::False => "a yes/no value".to_string(),
        _ => format!("{:?}", token),
    }
}

impl std::fmt::Display for ParseError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            ParseError::UnexpectedEof => {
                write!(
                    f,
                    "Your program ended too early. You might be missing an 'End.' to close a block."
                )
            }
            ParseError::UnexpectedToken {
                expected,
                found,
                line,
            } => {
                let found_name = friendly_token_name(found);
                // Make the expected description friendlier
                let expected_friendly = match expected.as_str() {
                    "Period" => "a period (.) at the end of the sentence",
                    "identifier" => "a name",
                    "expression" => "a value or expression",
                    "called" => "'called'",
                    _ => expected,
                };
                write!(
                    f,
                    "Line {}: Expected {}, but found {}.",
                    line, expected_friendly, found_name
                )
            }
            ParseError::InvalidStatement(line, msg) => {
                write!(
                    f,
                    "Line {}: I don't understand this sentence. {}",
                    line, msg
                )
            }
            ParseError::ExpectedType(line) => {
                write!(
                    f,
                    "Line {}: I need to know what type this is (like 'standard number', 'decimal', or 'text').",
                    line
                )
            }
            ParseError::LexerError(line, msg) => {
                write!(f, "Line {}: {}", line, msg)
            }
        }
    }
}

impl std::error::Error for ParseError {}

pub struct Parser {
    tokens: Vec<SpannedToken>,
    current: usize,
    beginner_mode: bool,
}

impl Parser {
    pub fn new(tokens: Vec<SpannedToken>) -> Self {
        Self {
            tokens,
            current: 0,
            beginner_mode: false,
        }
    }

    pub fn parse(source: &str) -> Result<Program, ParseError> {
        let tokens =
            Lexer::tokenize(source).map_err(|e| ParseError::LexerError(e.line, e.message))?;
        let mut parser = Parser::new(tokens);
        parser.parse_program()
    }

    fn parse_program(&mut self) -> Result<Program, ParseError> {
        let mut imports = Vec::new();
        let mut classes = Vec::new();
        let mut functions = Vec::new();
        let mut statements = Vec::new();
        let mut statement_lines = Vec::new();

        while !self.is_at_end() {
            match self.current() {
                Some(Token::Use) => {
                    self.advance();
                    match self.current().cloned() {
                        Some(Token::Identifier(ref name)) if name == "beginner" => {
                            self.advance();
                            self.expect(Token::Period)?;
                            self.beginner_mode = true;
                        }
                        Some(Token::StringLiteral(name)) => {
                            self.advance();
                            self.expect(Token::Period)?;
                            imports.push(name);
                        }
                        Some(tok) => {
                            return Err(ParseError::UnexpectedToken {
                                expected: "a package name in quotes".to_string(),
                                found: tok,
                                line: self.current_line(),
                            });
                        }
                        None => return Err(ParseError::UnexpectedEof),
                    }
                }
                // "Define a kind called ..." -> class definition
                Some(Token::Define) => {
                    classes.push(self.parse_class_def()?);
                }
                // "To funcName ..." -> function definition (at top level)
                Some(Token::To) if self.is_function_def() => {
                    functions.push(self.parse_function_def()?);
                }
                _ => {
                    let line = self.current_line();
                    statements.push(self.parse_statement()?);
                    statement_lines.push(line);
                }
            }
        }

        Ok(Program {
            imports,
            classes,
            functions,
            statements,
            statement_lines,
            beginner_mode: self.beginner_mode,
        })
    }

    /// Check if "To" starts a function definition vs compound assignment target
    /// Function def: "To <identifier> with ..." or "To <identifier> returning ..."
    fn is_word_token(token: &Token) -> bool {
        matches!(
            token,
            Token::Identifier(_)
                | Token::Add
                | Token::Subtract
                | Token::Multiply
                | Token::Divide
                | Token::Result
                | Token::Value
                | Token::Kind
                | Token::Property
        )
    }

    fn is_function_def(&self) -> bool {
        if let Some(Token::To) = self.tokens.get(self.current).map(|t| &t.token)
            && let Some(name_tok) = self.tokens.get(self.current + 1).map(|t| &t.token)
        {
            let valid_name = matches!(name_tok, Token::Identifier(_))
                || (self.beginner_mode && Self::is_word_token(name_tok));
            if valid_name && let Some(next) = self.tokens.get(self.current + 2).map(|t| &t.token) {
                if matches!(next, Token::With | Token::Returning | Token::Colon) {
                    return true;
                }
                if self.beginner_mode && Self::is_word_token(next) {
                    return true;
                }
            }
        }
        false
    }

    // ========== Helper Methods ==========

    fn current(&self) -> Option<&Token> {
        self.tokens.get(self.current).map(|t| &t.token)
    }

    fn current_line(&self) -> usize {
        self.tokens.get(self.current).map(|t| t.line).unwrap_or(1)
    }

    fn advance(&mut self) -> Option<&Token> {
        if !self.is_at_end() {
            self.current += 1;
        }
        self.tokens.get(self.current - 1).map(|t| &t.token)
    }

    fn is_at_end(&self) -> bool {
        self.current >= self.tokens.len()
    }

    fn check(&self, token: &Token) -> bool {
        self.current() == Some(token)
    }

    fn match_token(&mut self, token: &Token) -> bool {
        if self.check(token) {
            self.advance();
            true
        } else {
            false
        }
    }

    /// Consume a trailing "or equal to" (the "to" is optional) used to turn
    /// "greater than"/"less than" into their "or equal" variants. Returns
    /// whether the phrase was present.
    fn match_or_equal_to(&mut self) -> bool {
        if self.check(&Token::Or)
            && self.tokens.get(self.current + 1).map(|t| &t.token) == Some(&Token::Equal)
        {
            self.advance(); // "or"
            self.advance(); // "equal"
            self.match_token(&Token::To); // optional "to"
            true
        } else {
            false
        }
    }

    fn expect(&mut self, token: Token) -> Result<(), ParseError> {
        if self.check(&token) {
            self.advance();
            Ok(())
        } else {
            Err(ParseError::UnexpectedToken {
                expected: format!("{:?}", token),
                found: self.current().cloned().unwrap_or(Token::Period),
                line: self.current_line(),
            })
        }
    }

    // ========== Statement Parsing ==========

    fn parse_statement(&mut self) -> Result<Statement, ParseError> {
        match self.current() {
            Some(Token::Let) => self.parse_variable_decl(),
            Some(Token::Output) => self.parse_output(),
            Some(Token::If) => self.parse_if(),
            Some(Token::While) => self.parse_while(),
            Some(Token::For) => self.parse_for(),
            Some(Token::Stop) => self.parse_break(),
            Some(Token::Skip) => self.parse_continue(),
            Some(Token::Add) => self.parse_compound_assignment(BinaryOp::Add),
            Some(Token::Subtract) => self.parse_compound_assignment(BinaryOp::Subtract),
            Some(Token::Multiply) => self.parse_compound_assignment(BinaryOp::Multiply),
            Some(Token::Divide) => self.parse_compound_assignment(BinaryOp::Divide),
            Some(Token::Give) => self.parse_return(),
            Some(Token::Call) => self.parse_call_statement(),
            Some(Token::Ask) => self.parse_ask_statement(),
            Some(Token::Set) => self.parse_set_statement(),
            Some(Token::Remove) => self.parse_remove_statement(),
            Some(Token::Plot) => self.parse_plot(),
            Some(Token::Identifier(_)) if self.starts_phrase("find", &["gradients", "gradient"]) => {
                self.parse_phrase_statement(Statement::FindGradients)
            }
            Some(Token::Identifier(_)) if self.starts_phrase("show", &["graph"]) => {
                self.parse_phrase_statement(Statement::ShowGraph)
            }
            Some(Token::Identifier(_)) => self.parse_assignment_or_expr(),
            _ => Err(ParseError::InvalidStatement(
                self.current_line(),
                format!("Unexpected token: {:?}", self.current()),
            )),
        }
    }

    /// Parse: let x be a decimal with value 3.14.
    /// Also: let alice be a Person created with "Alice" and 30.
    fn parse_variable_decl(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Let)?;

        let name = self.expect_identifier()?;

        self.expect(Token::Be)?;

        // Optional article (a/an)
        if self.check(&Token::A) || self.check(&Token::An) {
            self.advance();
        }

        // "let ages be a new dictionary [from text to decimal]."
        if let Some(Token::Identifier(word)) = self.current()
            && (word.eq_ignore_ascii_case("new") || word.eq_ignore_ascii_case("empty"))
            && self.tokens.get(self.current + 1).map(|t| &t.token) == Some(&Token::TypeDict)
        {
            self.advance(); // "new" / "empty"
            self.advance(); // "dictionary"
            let var_type = self.parse_dict_type_tail()?;
            self.expect(Token::Period)?;
            return Ok(Statement::VariableDecl {
                name,
                var_type,
                value: Expr::FunctionCall {
                    name: "newDictionary".to_string(),
                    arguments: Vec::new(),
                },
            });
        }

        let var_type = self.parse_type()?;

        // Check if this is object instantiation: "Person created with ..."
        if let Type::Class(_) = &var_type
            && self.match_token(&Token::Created)
        {
            self.expect(Token::With)?;
            let arguments = self.parse_argument_list()?;
            self.expect(Token::Period)?;

            let class_name = match &var_type {
                Type::Class(n) => n.clone(),
                _ => unreachable!(),
            };

            return Ok(Statement::VariableDecl {
                name,
                var_type,
                value: Expr::NewObject {
                    class_name,
                    arguments,
                },
            });
        }

        self.expect(Token::With)?;
        self.expect(Token::Value)?;

        let value = self.parse_expression()?;

        self.expect(Token::Period)?;

        Ok(Statement::VariableDecl {
            name,
            var_type,
            value,
        })
    }

    fn word_at(&self, offset: usize, words: &[&str]) -> bool {
        matches!(
            self.tokens.get(self.current + offset).map(|t| &t.token),
            Some(Token::Identifier(word)) if words.iter().any(|w| word.eq_ignore_ascii_case(w))
        )
    }

    /// Matches "<verb> the <noun> of", e.g. "Find the gradients of".
    fn starts_phrase(&self, verb: &str, nouns: &[&str]) -> bool {
        self.word_at(0, &[verb])
            && self.tokens.get(self.current + 1).map(|t| &t.token) == Some(&Token::The)
            && self.word_at(2, nouns)
            && self.tokens.get(self.current + 3).map(|t| &t.token) == Some(&Token::Of)
    }

    /// Parse: Find the gradients of loss.  /  show the graph of loss.
    fn parse_phrase_statement(
        &mut self,
        make: fn(Expr) -> Statement,
    ) -> Result<Statement, ParseError> {
        self.current += 4;
        let expr = self.parse_expression()?;
        self.expect(Token::Period)?;
        Ok(make(expr))
    }

    /// Parse: output "Hello World".
    fn parse_output(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Output)?;
        let expr = self.parse_expression()?;
        self.expect(Token::Period)?;
        Ok(Statement::Output(expr))
    }

    /// Parse: If condition then ... otherwise if ... otherwise ...
    fn parse_if(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::If)?;

        let condition = self.parse_expression()?;

        // Optional "then"
        self.match_token(&Token::Then);

        // Optional comma
        self.match_token(&Token::Comma);

        let then_block = self.parse_block()?;

        // Parse else-if chains
        let mut else_ifs = Vec::new();
        let mut else_block = None;

        while self.match_token(&Token::Otherwise) || self.match_token(&Token::Else) {
            // Optional comma
            self.match_token(&Token::Comma);

            // Check if this is an else-if
            if self.check(&Token::If) {
                self.advance(); // consume "if"
                let elif_condition = self.parse_expression()?;
                self.match_token(&Token::Then);
                self.match_token(&Token::Comma);
                let elif_block = self.parse_block()?;
                else_ifs.push((elif_condition, elif_block));
            } else {
                // This is the final else block
                else_block = Some(self.parse_block()?);
                break;
            }
        }

        if self.check(&Token::End) {
            self.advance();
            self.match_token(&Token::Period);
        }

        Ok(Statement::If {
            condition,
            then_block,
            else_ifs,
            else_block,
        })
    }

    /// Parse: While condition, ... End.
    fn parse_while(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::While)?;

        let condition = self.parse_expression()?;

        // Optional comma
        self.match_token(&Token::Comma);

        let body = self.parse_body_until_end()?;

        self.expect(Token::End)?;
        self.expect(Token::Period)?;

        Ok(Statement::While { condition, body })
    }

    /// Parse: For each x from start to end, ... End.
    fn parse_for(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::For)?;
        self.expect(Token::Each)?;

        let variable = self.expect_identifier()?;

        self.expect(Token::From)?;
        let start = self.parse_expression()?;

        self.expect(Token::To)?;
        let end = self.parse_expression()?;

        // Optional comma
        self.match_token(&Token::Comma);

        // Parse body until "End."
        let body = self.parse_body_until_end()?;

        self.expect(Token::End)?;
        self.expect(Token::Period)?;

        Ok(Statement::For {
            variable,
            start,
            end,
            body,
        })
    }

    /// Parse: stop.
    fn parse_break(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Stop)?;
        self.expect(Token::Period)?;
        Ok(Statement::Break)
    }

    /// Parse: skip.
    fn parse_continue(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Skip)?;
        self.expect(Token::Period)?;
        Ok(Statement::Continue)
    }

    /// Parse compound assignment. Both natural-English and legacy forms are
    /// accepted, disambiguated by the preposition that follows the first value:
    ///   Add 5 to total.        -> total = total + 5
    ///   Subtract 5 from total. -> total = total - 5
    ///   Multiply total by 2.   -> total = total * 2   (natural, target first)
    ///   Divide total by 2.     -> total = total / 2   (natural, target first)
    ///   Multiply 2 to total.   -> total = total * 2   (legacy, target last)
    ///   Divide 2 from total.   -> total = total / 2   (legacy, target last)
    fn parse_compound_assignment(&mut self, op: BinaryOp) -> Result<Statement, ParseError> {
        self.advance(); // Skip the operation keyword (Add/Subtract/etc.)

        let first = self.parse_expression()?;

        // Natural "Multiply/Divide <target> by <amount>" form: the target comes
        // first and the amount follows "by".
        if matches!(op, BinaryOp::Multiply | BinaryOp::Divide) && self.check(&Token::By) {
            self.advance(); // consume "by"
            let name = match first {
                Expr::Identifier(name) => name,
                _ => {
                    return Err(ParseError::UnexpectedToken {
                        expected: "a variable name before 'by'".to_string(),
                        found: Token::By,
                        line: self.current_line(),
                    });
                }
            };
            let value = self.parse_expression()?;
            self.expect(Token::Period)?;
            return Ok(Statement::CompoundAssignment { name, op, value });
        }

        // Legacy form: the amount comes first, the target follows the preposition.
        match op {
            BinaryOp::Add | BinaryOp::Multiply => self.expect(Token::To)?,
            BinaryOp::Subtract | BinaryOp::Divide => self.expect(Token::From)?,
            _ => {}
        }

        let name = self.expect_identifier()?;

        self.expect(Token::Period)?;

        Ok(Statement::CompoundAssignment {
            name,
            op,
            value: first,
        })
    }

    /// Parse assignment or expression statement
    fn parse_assignment_or_expr(&mut self) -> Result<Statement, ParseError> {
        let expr = self.parse_expression()?;
        self.expect(Token::Period)?;
        Ok(Statement::ExprStatement(expr))
    }

    // ========== Function Parsing ==========

    /// Parse: To funcName with a standard number x and a standard number y returning a standard number:
    ///     ...
    /// End.
    fn parse_function_def(&mut self) -> Result<FunctionDef, ParseError> {
        self.expect(Token::To)?;

        let name = self.expect_identifier()?;

        let parameters = if self.match_token(&Token::With) {
            self.parse_parameter_list()?
        } else if self.beginner_mode && matches!(self.current(), Some(Token::Identifier(_))) {
            self.parse_beginner_parameter_list()?
        } else {
            Vec::new()
        };

        let return_type = if self.match_token(&Token::Returning) {
            if self.check(&Token::A) || self.check(&Token::An) {
                self.advance();
            }
            if self.match_token(&Token::Nothing) {
                Type::Void
            } else {
                self.parse_type()?
            }
        } else if self.beginner_mode {
            Type::Inferred
        } else {
            Type::Void
        };

        self.expect(Token::Colon)?;

        // Parse body until "End."
        let body = self.parse_body_until_end()?;

        self.expect(Token::End)?;
        self.expect(Token::Period)?;

        Ok(FunctionDef {
            name,
            parameters,
            return_type,
            body,
        })
    }

    /// Parse parameter list: "a standard number x and a standard number y"
    fn parse_parameter_list(&mut self) -> Result<Vec<Parameter>, ParseError> {
        let mut params = Vec::new();

        loop {
            // Optional article
            if self.check(&Token::A) || self.check(&Token::An) {
                self.advance();
            }

            let param_type = self.parse_type()?;

            let name = self.expect_identifier()?;

            params.push(Parameter { name, param_type });

            if !self.match_token(&Token::And) {
                break;
            }
        }

        Ok(params)
    }

    fn parse_beginner_parameter_list(&mut self) -> Result<Vec<Parameter>, ParseError> {
        let mut params = Vec::new();
        loop {
            let name = self.expect_identifier()?;
            params.push(Parameter {
                name,
                param_type: Type::Inferred,
            });
            if !self.match_token(&Token::And) {
                break;
            }
        }
        Ok(params)
    }

    /// Parse: Give back expr.
    fn parse_return(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Give)?;
        self.expect(Token::Back)?;

        if self.check(&Token::Period) {
            self.advance();
            return Ok(Statement::Return(None));
        }

        let expr = self.parse_expression()?;
        self.expect(Token::Period)?;

        Ok(Statement::Return(Some(expr)))
    }

    /// Parse: Call funcName with args.
    fn parse_call_statement(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Call)?;
        let name = self.expect_identifier()?;

        let arguments = if self.match_token(&Token::With) {
            self.parse_argument_list()?
        } else {
            Vec::new()
        };

        self.expect(Token::Period)?;

        Ok(Statement::ExprStatement(Expr::FunctionCall {
            name,
            arguments,
        }))
    }

    /// Parse: Ask obj to method. / Ask obj to method with args.
    fn parse_ask_statement(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Ask)?;
        let object_name = self.expect_identifier()?;
        self.expect(Token::To)?;
        let method = self.expect_identifier()?;

        let arguments = if self.match_token(&Token::With) {
            self.parse_argument_list()?
        } else {
            Vec::new()
        };

        self.expect(Token::Period)?;

        Ok(Statement::ExprStatement(Expr::MethodCall {
            object: Box::new(Expr::Identifier(object_name)),
            method,
            arguments,
        }))
    }

    /// Parse: Set name to value. / Set the prop of obj to value.
    fn parse_set_statement(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Set)?;

        // Check if this is property assignment: "Set the prop of obj to value."
        if self.match_token(&Token::The) {
            let property = self.expect_identifier()?;
            self.expect(Token::Of)?;
            let object = self.expect_identifier()?;
            self.expect(Token::To)?;
            let value = self.parse_expression()?;
            self.expect(Token::Period)?;
            return Ok(Statement::PropertyAssignment {
                object,
                property,
                value,
            });
        }

        // Regular assignment: "Set name to value."
        let name = self.expect_identifier()?;

        // Indexed assignment: "Set name[index] to value."
        if self.match_token(&Token::LBracket) {
            let index = self.parse_expression()?;
            self.expect(Token::RBracket)?;
            self.expect(Token::To)?;
            let value = self.parse_expression()?;
            self.expect(Token::Period)?;
            return Ok(Statement::IndexAssignment {
                collection: name,
                index,
                value,
            });
        }

        self.expect(Token::To)?;
        let value = self.parse_expression()?;
        self.expect(Token::Period)?;

        Ok(Statement::Assignment { name, value })
    }

    /// Parse: Remove "Alice" from ages.
    /// Desugars to: Set ages to the result of removeKey with ages and "Alice".
    fn parse_remove_statement(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Remove)?;
        let key = self.parse_expression()?;
        self.expect(Token::From)?;
        let name = self.expect_identifier()?;
        self.expect(Token::Period)?;
        Ok(Statement::Assignment {
            name: name.clone(),
            value: Expr::FunctionCall {
                name: "removeKey".to_string(),
                arguments: vec![Expr::Identifier(name), key],
            },
        })
    }

    /// Parse: plot data [against yData] [as a <type> chart] [titled "Title"] to "file.html".
    fn parse_plot(&mut self) -> Result<Statement, ParseError> {
        self.expect(Token::Plot)?;

        // Parse the data expression
        let data = self.parse_expression()?;

        // Optional "against yData" for scatter plots
        let against = if self.match_token(&Token::Against) {
            Some(self.parse_expression()?)
        } else {
            None
        };

        // Optional "as a <type> chart"
        let chart_type = if self.match_token(&Token::As) {
            // Optional article
            if self.check(&Token::A) || self.check(&Token::An) {
                self.advance();
            }

            let ct = if self.match_token(&Token::Line) {
                ChartType::Line
            } else if self.match_token(&Token::Bar) {
                ChartType::Bar
            } else if self.match_token(&Token::Scatter) {
                ChartType::Scatter
            } else if self.match_token(&Token::Histogram) {
                ChartType::Histogram
            } else {
                ChartType::Line // default
            };

            // Optional "chart" keyword
            self.match_token(&Token::Chart);

            // Optional "plot" keyword (for "scatter plot")
            self.match_token(&Token::Plot);

            ct
        } else {
            ChartType::Line // default chart type
        };

        // Optional "titled 'Title'"
        let title = if self.match_token(&Token::Titled) {
            match self.current().cloned() {
                Some(Token::StringLiteral(s)) => {
                    self.advance();
                    Some(s)
                }
                _ => None,
            }
        } else {
            None
        };

        // Required "to 'filename.html'"
        self.expect(Token::To)?;
        let output_file = match self.current().cloned() {
            Some(Token::StringLiteral(s)) => {
                self.advance();
                s
            }
            _ => {
                return Err(ParseError::UnexpectedToken {
                    expected: "output filename".to_string(),
                    found: self.current().cloned().unwrap_or(Token::Period),
                    line: self.current_line(),
                });
            }
        };

        self.expect(Token::Period)?;

        Ok(Statement::Plot {
            data,
            against,
            chart_type,
            title,
            output_file,
        })
    }

    /// Parse argument list: "expr and expr and expr"
    fn parse_argument_list(&mut self) -> Result<Vec<Expr>, ParseError> {
        let mut args = Vec::new();

        // Parse arguments at comparison level (not full expression)
        // so that "and" is treated as separator, not boolean operator
        args.push(self.parse_comparison()?);

        while self.match_token(&Token::And) {
            args.push(self.parse_comparison()?);
        }

        Ok(args)
    }

    /// Parse statements until End/EndCreate/EndKind token
    fn parse_body_until_end(&mut self) -> Result<Vec<Statement>, ParseError> {
        let mut statements = Vec::new();

        while !self.is_at_end()
            && !self.check(&Token::End)
            && !self.check(&Token::EndCreate)
            && !self.check(&Token::EndKind)
        {
            statements.push(self.parse_statement()?);
        }

        Ok(statements)
    }

    /// Helper to parse an identifier and return its name.
    /// Also accepts certain keyword tokens that can be used as variable/function names.
    fn expect_identifier(&mut self) -> Result<String, ParseError> {
        match self.current().cloned() {
            Some(Token::Identifier(name)) => {
                self.advance();
                Ok(name)
            }
            // Allow these keywords to be used as identifiers in name contexts
            Some(Token::Result) => {
                self.advance();
                Ok("result".to_string())
            }
            Some(Token::Value) => {
                self.advance();
                Ok("value".to_string())
            }
            Some(Token::Kind) => {
                self.advance();
                Ok("kind".to_string())
            }
            Some(Token::Property) => {
                self.advance();
                Ok("property".to_string())
            }
            Some(Token::A) => {
                self.advance();
                Ok("a".to_string())
            }
            Some(Token::An) => {
                self.advance();
                Ok("an".to_string())
            }
            Some(Token::Add) => {
                self.advance();
                Ok("add".to_string())
            }
            Some(Token::Subtract) => {
                self.advance();
                Ok("subtract".to_string())
            }
            Some(Token::Multiply) => {
                self.advance();
                Ok("multiply".to_string())
            }
            Some(Token::Divide) => {
                self.advance();
                Ok("divide".to_string())
            }
            other => Err(ParseError::UnexpectedToken {
                expected: "identifier".to_string(),
                found: other.unwrap_or(Token::Period),
                line: self.current_line(),
            }),
        }
    }

    // ========== Class Parsing ==========
